# fl-ac-appsync

./: .gitignore  Cargo.toml  README.md  migration.sql  schema.graphql
builder/: Dockerfile  build.sh  docker-compose.yml
frontend/: .babelrc  .dockerignore  .eslintrc  .prettierignore  .stylelintrc  .yarnclean  Dockerfile  next.config.js  package.json  relay.config.js  tsconfig.json
frontend/src/: ClientRenderingOnly.tsx  auth.tsx  relayEnvironment.ts  subscriptionClient.ts
frontend/src/pages/: _app.tsx  _document.tsx  auctions.tsx  index.tsx
frontend/src/pages/__generated__/: auctionsQuery.graphql.ts
frontend/src/pages/auction/: [auctionId].tsx  create.tsx
frontend/src/pages/auction/__generated__/: AuctionIdBidMutation.graphql.ts  AuctionIdQuery.graphql.ts  AuctionIdSubscription.graphql.ts  createAuctionMutation.graphql.ts
rdsdata_mapper/: Cargo.toml
rdsdata_mapper/src/: convert.rs  error.rs  lib.rs  params.rs  typeclass.rs
rdsdata_mapper_derive/: Cargo.toml
rdsdata_mapper_derive/src/: lib.rs
rdsdata_mapper_derive/tests/: compile.rs  suite.rs
src/: arg.rs  auth.rs  database.rs  lib.rs  logger.rs  model.rs
terraform/: appsync.tf  artifact.tf  iam.tf  lambda.tf  main.tf  outputs.tf  rds.tf  variables.tf  vpc.tf
