[package]
name = "fl_ac_appsync"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "std", "env-filter", "json" ] }
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
anyhow = "1.0.56"
thiserror = "1.0"
lambda_runtime = "0.5.0"
aws-config = "0.10.1"
aws-sdk-rdsdata = "0.10.1"
ulid = "0.5.0"
chrono = "0.4.19"
rdsdata_mapper = { path = "./rdsdata_mapper" }
